package org.lets_play_be.notification;

public enum NotificationType {
    LOBBY_CREATED,
    LOBBY_UPDATED,
    LOBBY_CLOSED,
    MESSAGE
}
